--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -1,11 +1,25 @@
-body {
-  background-color: black;
-  // overflow: hidden;
+@import './setup.scss';
+@import './variables.scss';
+
+html {
+  font-size: 62.5%;
+  background-color: $purple;
+  background: linear-gradient($navy 10%, $purple 100%);
+  color: $white;
 }
 
 .container {
-  background-color: white;
-  height: 50vh;
-  width: 60vw;
-  border-radius: 5%;
+  position: absolute;
+  top: 0;
+  right: 35%;
+  display: flex;
+  flex-direction: column;
+}
+
+h1 {
+  font-size: 20rem;
+}
+
+h3 {
+  font-size: 8rem;
 }
