--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,10 +1,28 @@
-body {
-  background-color: black;
+html {
+  font-size: 62.5%;
 }
 
 .container {
-  background-color: white;
-  height: 50vh;
-  width: 60vw;
-  border-radius: 5%;
+  color: white;
+  position: absolute;
+  top: 0;
+  right: 35%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+h1 {
+  font-size: 20rem;
+}
+
+h3 {
+  font-size: 8rem;
 }
