--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -13,23 +13,50 @@ html {
 
 .headerContainer {
   position: absolute;
-  // top: 0;
-  // right: 35%;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 nav {
-  text-decoration: none;
+  ul {
+    display: flex;
+    // justify-content: space-evenly;
+  }
+  li {
+    list-style: none;
+    padding: 20px;
+  }
 }
+
+
 
 h1 {
   font-family: $header-font;
-  font-size: 15rem;
+  font-size: 10rem;
   text-transform: uppercase;
+  margin: 0;
+  margin-top: 12%;
 }
 
 h3 {
-  font-size: 8rem;
+  font-size: 6rem;
+}
+
+i {
+  margin-top: 50px;
+}
+
+.spanContainer {
+  font-size: 3.5rem;
+  min-width: 320px;
+  margin-left: 30px;
+}
+
+.spanContainer .text {
+  margin: 0 8px;
 }
