--- a/styles/styles.css
+++ b/styles/styles.css
@@ -281,6 +281,10 @@ html {
 
 .headerContainer {
   position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -293,16 +297,38 @@ html {
           align-items: center;
 }
 
-nav {
-  text-decoration: none;
+nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+nav li {
+  list-style: none;
+  padding: 20px;
 }
 
 h1 {
   font-family: "Rubik Mono One", sans-serif;
-  font-size: 15rem;
+  font-size: 10rem;
   text-transform: uppercase;
+  margin: 0;
+  margin-top: 12%;
 }
 
 h3 {
-  font-size: 8rem;
+  font-size: 6rem;
+}
+
+i {
+  margin-top: 50px;
+}
+
+.spanContainer {
+  font-size: 3.5rem;
+  min-width: 320px;
+  margin-left: 30px;
+}
+
+.spanContainer .text {
+  margin: 0 8px;
 }
