--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -7,16 +7,28 @@ html {
   font-family: $body-font;
 }
 
-// canvas {
-//   font-family: $body-font;
-// }
 
-.headerContainer {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
+img {
+  width: 100%;
+  height: auto;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+canvas {
+  z-index: -100;
+}
+
+.wrapper {
+  width: 80%;
+  max-width: 1400px;
+  margin: 0 auto;
+}
+
+header {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -25,15 +37,15 @@ html {
 nav {
   ul {
     display: flex;
-    // justify-content: space-evenly;
   }
   li {
+    font-family: $body-font;
+    text-transform: uppercase;
+    font-size: 2.8rem;
     list-style: none;
     padding: 20px;
   }
 }
-
-
 
 h1 {
   font-family: $header-font;
@@ -43,12 +55,47 @@ h1 {
   margin-top: 12%;
 }
 
-h3 {
-  font-size: 6rem;
+h1:hover {
+  background: -webkit-linear-gradient(45deg, rgba(22,219,231,1) 0%, rgba(141,29,253,1) 50%, rgba(233,19,164,1) 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  transition: 0.6s;
+  }
+
+h2 {
+  text-transform: uppercase;
+  margin-top: 0;
 }
 
-i {
-  margin-top: 50px;
+
+h3 {
+  font-size: 6rem;
+  text-transform: uppercase;
+}
+
+h4 {
+  font-size: 4rem;
+  text-transform: uppercase;
+}
+
+main {
+  background: rgba(0, 0, 0, 0.9);
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 50px;
+  margin-top: 5%;
+  border: 2px solid yellowgreen;
+}
+
+section {
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  // align-items: center;
 }
 
 .spanContainer {
@@ -60,3 +107,80 @@ i {
 .spanContainer .text {
   margin: 0 8px;
 }
+
+
+.about {
+  color: white;
+  font-size: 2.5rem;
+}
+
+.aboutMeContainer {
+  display: flex;
+  align-items: center;
+  .textContainer {
+    width: 70%;
+  }
+  .imgContainer {
+    width: 30%;
+    margin-left: 5%;
+  }
+}
+
+.selfie {
+  border-radius: 50%;
+  width: 250px;
+  border: 4px solid #e913a4;;
+}
+
+.projects {
+  border-radius: 10%;
+  // background-color: black;
+  margin: 0;
+}
+
+.skills {
+  .skillsContainer {
+    display: flex;
+    justify-content: center;
+  }
+  ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    // width: 80%;
+  }
+  li {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    margin: 10px;
+
+  }
+}
+
+.contact {
+  // background-color: black;
+}
+
+// #about,
+// .projects,
+// .skills,
+// .contact {
+//   background: rgba(0, 0, 0, 0.9);
+//   border-radius: 10px;
+//   padding: 20px;
+// }
+
+.projectMainContainer {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.projectContainer {
+  width: 50%;
+  border-right: solid 2px white;
+}
+
