--- a/styles/styles.css
+++ b/styles/styles.css
@@ -279,12 +279,27 @@ html {
   font-family: "Cutive Mono", monospace;
 }
 
-.headerContainer {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
+img {
+  width: 100%;
+  height: auto;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+canvas {
+  z-index: -100;
+}
+
+.wrapper {
+  width: 80%;
+  max-width: 1400px;
+  margin: 0 auto;
+}
+
+header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -303,6 +318,9 @@ nav ul {
   display: flex;
 }
 nav li {
+  font-family: "Cutive Mono", monospace;
+  text-transform: uppercase;
+  font-size: 2.8rem;
   list-style: none;
   padding: 20px;
 }
@@ -315,12 +333,62 @@ h1 {
   margin-top: 12%;
 }
 
-h3 {
-  font-size: 6rem;
+h1:hover {
+  background: -webkit-linear-gradient(45deg, #16dbe7 0%, #8d1dfd 50%, #e913a4 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-transition: 0.6s;
+  transition: 0.6s;
 }
 
-i {
-  margin-top: 50px;
+h2 {
+  text-transform: uppercase;
+  margin-top: 0;
+}
+
+h3 {
+  font-size: 6rem;
+  text-transform: uppercase;
+}
+
+h4 {
+  font-size: 4rem;
+  text-transform: uppercase;
+}
+
+main {
+  background: rgba(0, 0, 0, 0.9);
+  border-radius: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 50px;
+  margin-top: 5%;
+  border: 2px solid yellowgreen;
+}
+
+section {
+  width: 90%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .spanContainer {
@@ -331,4 +399,86 @@ i {
 
 .spanContainer .text {
   margin: 0 8px;
+}
+
+.about {
+  color: white;
+  font-size: 2.5rem;
+}
+
+.aboutMeContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.aboutMeContainer .textContainer {
+  width: 70%;
+}
+.aboutMeContainer .imgContainer {
+  width: 30%;
+  margin-left: 5%;
+}
+
+.selfie {
+  border-radius: 50%;
+  width: 250px;
+  border: 4px solid #e913a4;
+}
+
+.projects {
+  border-radius: 10%;
+  margin: 0;
+}
+
+.skills .skillsContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.skills ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.skills li {
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 10px;
+  margin: 10px;
+}
+
+.projectMainContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.projectContainer {
+  width: 50%;
+  border-right: solid 2px white;
 }
