--- a/styles/styles.css
+++ b/styles/styles.css
@@ -277,6 +277,7 @@ html {
   font-size: 62.5%;
   color: #fff;
   font-family: "Cutive Mono", monospace;
+  scroll-behavior: smooth;
 }
 
 img {
@@ -298,6 +299,16 @@ canvas {
   max-width: 1400px;
   margin: 0 auto;
 }
+@media (max-width: 1300px) {
+  .wrapper {
+    width: 90%;
+  }
+}
+@media (max-width: 1000px) {
+  .wrapper {
+    width: 95%;
+  }
+}
 
 header {
   display: -webkit-box;
@@ -313,9 +324,13 @@ header {
 }
 
 nav ul {
+  padding: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 nav li {
   font-family: "Cutive Mono", monospace;
@@ -324,6 +339,24 @@ nav li {
   list-style: none;
   padding: 20px;
 }
+@media (max-width: 550px) {
+  nav li {
+    padding: 0;
+    padding: 2%;
+    font-size: 1.8rem;
+  }
+}
+
+.hoverLink {
+  -webkit-transition: 0.6s;
+  transition: 0.6s;
+  border-left: 2px dotted transparent;
+}
+
+.hoverLink:hover {
+  border-left: 2px dotted #fff;
+  padding-left: 20px;
+}
 
 h1 {
   font-family: "Rubik Mono One", sans-serif;
@@ -331,6 +364,18 @@ h1 {
   text-transform: uppercase;
   margin: 0;
   margin-top: 12%;
+  text-align: center;
+}
+@media (max-width: 1300px) {
+  h1 {
+    margin-top: 7%;
+    font-size: 9rem;
+  }
+}
+@media (max-width: 550px) {
+  h1 {
+    font-size: 6rem;
+  }
 }
 
 h1:hover {
@@ -349,32 +394,22 @@ h2 {
 h3 {
   font-size: 6rem;
   text-transform: uppercase;
+  text-align: center;
+}
+@media (max-width: 1300px) {
+  h3 {
+    font-size: 5rem;
+  }
+}
+@media (max-width: 550px) {
+  h3 {
+    font-size: 3rem;
+  }
 }
 
 h4 {
   font-size: 4rem;
   text-transform: uppercase;
-}
-
-main {
-  background: rgba(0, 0, 0, 0.9);
-  border-radius: 20px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding: 50px;
-  margin-top: 5%;
-  border: 2px solid yellowgreen;
 }
 
 section {
@@ -390,11 +425,22 @@ section {
       -ms-flex-pack: center;
           justify-content: center;
 }
+@media (max-width: 1300px) {
+  section {
+    width: 95%;
+  }
+}
 
 .spanContainer {
   font-size: 3.5rem;
   min-width: 320px;
   margin-left: 30px;
+}
+@media (max-width: 550px) {
+  .spanContainer {
+    width: 100%;
+    scale: 0.7;
+  }
 }
 
 .spanContainer .text {
@@ -403,10 +449,12 @@ section {
 
 .about {
   color: white;
-  font-size: 2.5rem;
+  font-size: 2rem;
 }
-
-.aboutMeContainer {
+.about h4 {
+  margin: 0;
+}
+.about .aboutMeContainer {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -414,12 +462,43 @@ section {
       -ms-flex-align: center;
           align-items: center;
 }
-.aboutMeContainer .textContainer {
-  width: 70%;
+@media (max-width: 550px) {
+  .about .aboutMeContainer {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
 }
-.aboutMeContainer .imgContainer {
-  width: 30%;
-  margin-left: 5%;
+.about .aboutMeContainer .textContainer {
+  width: 80%;
+}
+@media (max-width: 1000px) {
+  .about .aboutMeContainer .textContainer {
+    width: 60%;
+  }
+}
+@media (max-width: 550px) {
+  .about .aboutMeContainer .textContainer {
+    width: 100%;
+  }
+}
+.about .aboutMeContainer .imgContainer {
+  width: 20%;
+  margin-left: 8%;
+}
+@media (max-width: 550px) {
+  .about .aboutMeContainer .imgContainer {
+    width: 100%;
+    margin: 0;
+    margin-top: 5%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 
 .selfie {
@@ -451,6 +530,11 @@ section {
       -ms-flex-pack: center;
           justify-content: center;
 }
+@media (max-width: 550px) {
+  .skills ul {
+    padding: 0;
+  }
+}
 .skills li {
   list-style: none;
   display: -webkit-box;
@@ -466,8 +550,21 @@ section {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 10px;
+  padding: 1%;
   margin: 10px;
+}
+.skills .skillIcon {
+  font-size: 7rem;
+}
+@media (max-width: 900px) {
+  .skills .skillIcon {
+    font-size: 5rem;
+  }
+}
+@media (max-width: 550px) {
+  .skills .skillIcon {
+    font-size: 3rem;
+  }
 }
 
 .projectMainContainer {
@@ -476,9 +573,147 @@ section {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  position: relative;
+}
+.projectMainContainer .projectContainer {
+  width: 50%;
+  padding: 2% 5%;
+}
+@media (max-width: 550px) {
+  .projectMainContainer .projectContainer {
+    width: 100%;
+  }
+}
+.projectMainContainer .projectContainer .projectIcon {
+  font-size: 2.5rem;
+  padding: 2%;
+}
+.projectMainContainer .projectContainer h5 {
+  font-size: 2rem;
+  margin: 0;
+  margin-bottom: 2%;
+}
+.projectMainContainer .projectContainer p {
+  font-size: 1.8rem;
+}
+.projectMainContainer .numberContainer {
+  width: 100%;
+  height: 4.9vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 1.5% auto;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.projectMainContainer .numberContainer h4 {
+  margin: 0;
+  font-size: 4rem;
+  position: absolute;
+}
+.projectMainContainer .proLeft {
+  text-align: right;
+  border-right: 2px solid white;
+}
+.projectMainContainer .proRight {
+  border-left: 2px solid white;
+}
+@media (max-width: 550px) {
+  .projectMainContainer .empty {
+    display: none;
+  }
 }
 
-.projectContainer {
-  width: 50%;
-  border-right: solid 2px white;
+.gradient-border {
+  background: linear-gradient(60deg, #f79533, #f37055, #ef4e7b, #a166ab, #5073b8, #1098ad, #07b39b, #6fba82);
+  -webkit-animation: animatedgradient 3s ease alternate infinite;
+          animation: animatedgradient 3s ease alternate infinite;
+  border-radius: 20px;
+  margin-top: 5%;
+  padding: 1%;
+  margin-bottom: 5%;
+}
+
+.mainSection {
+  background: rgba(0, 0, 0, 0.9);
+  border-radius: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 5%;
+  width: 100%;
+  height: 100%;
+}
+
+@-webkit-keyframes animatedgradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+@keyframes animatedgradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+@-webkit-keyframes bounce {
+  0% {
+    -webkit-transform: translateY(-5px);
+            transform: translateY(-5px);
+  }
+  50% {
+    -webkit-transform: translateY(10px);
+            transform: translateY(10px);
+  }
+  100% {
+    -webkit-transform: translateY(-5px);
+            transform: translateY(-5px);
+  }
+}
+@keyframes bounce {
+  0% {
+    -webkit-transform: translateY(-5px);
+            transform: translateY(-5px);
+  }
+  50% {
+    -webkit-transform: translateY(10px);
+            transform: translateY(10px);
+  }
+  100% {
+    -webkit-transform: translateY(-5px);
+            transform: translateY(-5px);
+  }
+}
+#bounce {
+  margin: 10%;
+  -webkit-animation: bounce 3s infinite ease-in-out;
+  animation: bounce 3s infinite ease-in-out;
+}
+@media (max-width: 1300px) {
+  #bounce {
+    margin-top: 7%;
+  }
 }
