--- a/styles/styles.css
+++ b/styles/styles.css
@@ -636,6 +636,10 @@ section {
   margin-bottom: 5%;
 }
 
+main {
+  pointer-events: none;
+}
+
 .mainSection {
   background: rgba(0, 0, 0, 0.9);
   border-radius: 20px;
@@ -655,6 +659,7 @@ section {
   padding: 5%;
   width: 100%;
   height: 100%;
+  pointer-events: none;
 }
 
 @-webkit-keyframes animatedgradient {
