--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -295,6 +295,10 @@ section {
   margin-bottom: 5%;  
 }
 
+main {
+  pointer-events: none;
+}
+
 
 .mainSection {
   background: rgba(0, 0, 0, 0.9);
@@ -306,6 +310,7 @@ section {
   padding: 5%;
   width: 100%;
   height: 100%;
+  pointer-events: none;
 }
 
 
