--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -9,6 +9,14 @@ html {
   scroll-behavior: smooth;
 }
 
+body {
+  overflow-y: hidden;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+}
 
 img {
   width: 100%;
